--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>辛いモノ</title>
+		<title>技術書典5</title>
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -19,11 +19,181 @@
 		<div class="reveal">
 			<div class="slides">
 
+				<!-- 確認用に一時的に複製する-->
 				<section 
-					data-markdown="./md/hoge.md"
-					data-background-color="#800000"
+					data-markdown=""
+					data-background-color="#B0E0E6"
 					data-separator="^\n---$"
 					data-separator-vertical="^\n--$">
+				<script type="text/template">
+<!-- .slide: data-background="img/top.png"  data-background-size="100%" -->
+
+# 技術書典5 <!-- .element: style="font-color:black" -->
+
+---
+
+<!-- .slide: data-background="img/top.png"  data-background-size="100%" -->
+
+Note:
+
+10/8、池袋サンシャインシティのD展示ホールにて開催される技術書典5。
+つい、月曜日に各サークルの配置情報や詳細情報が閲覧できるようになった
+たいむりーな話題、ついったーで流れてたかも
+日程的に今回は参加はできないけど、次回の予習として軽く紹介できれば。
+
+---
+
+ここで言う技術書とは
+
+---
+
+> 「ITや機械工作とその周辺領域について書いた本」
+
+よくある質問:「技術書とはなんですか」より
+
+
+Note:
+
+パラッと見てみたら
+インフラ、アプリケーション作成、使い方などなど。
+とかラズパイ作ってみた、
+動的に環境構築するShell書いてみたとか、
+mdで同人誌作る本とか機械学習、計算シミュレータ、
+仮面ライダービルドの数式解説本、VR開発、バ美肉
+アニメーション作成
+
+---
+
+参加サークル数:474サークル
+
+Note:
+
+企業からの出展含む
+
+---
+
+<!-- .slide: data-background="img/circle-list-contains-map.png"  data-background-size="100%" -->
+
+---
+
+<!-- .slide: data-background="img/dousen.png"  data-background-size="70%" -->
+
+左下サークルリストから
+
+---
+
+サークル詳細の見方
+
+---
+
+<!-- .slide: data-background="img/circle-list-only.png"  data-background-size="100%" -->
+
+Note:
+
+見たいサークルカットをそのままタップOrクリック
+
+---
+
+<!-- .slide: data-background="img/niku.png"  data-background-size="100%" -->
+
+---
+
+<!-- .slide: data-background="img/niku-product.png"  data-background-size="100%" -->
+
+Note:
+
+詳細がないサークルさんもちらほら。
+これから更新されるのかも???
+一週間前に見直すと変わるかも
+
+---
+
+ちなみに
+
+---
+
+翔泳社さんとかオライリージャパンさんとかも…
+
+Note:
+
+ちょくちょくお世話になったりする
+
+---
+
+<!-- .slide: data-background="img/tech-book-comp.png"  data-background-size="100%" -->
+
+---
+
+より活用する為に
+
+---
+
+サークルチェックリスト
+
+---
+
+<!-- .slide: data-background="img/user-register.png"  data-background-size="100%" -->
+
+<!--ふぇーどいん-->
+ユーザー登録する事で利用可能
+
+Note:
+
+入力項目も簡単でありがたい
+
+---
+
+<!-- .slide: data-background="img/niku.png"  data-background-size="100%" -->
+
+ワンクリックでサークルチェックリストに追加できるように
+
+---
+
+<!-- .slide: data-background="img/circle-check-list.png"  data-background-size="100%" -->
+
+Note:
+
+地図と一緒みれて確認しやすい
+余談、電子決済などに対応するサークルさんとかPDFダウンロードカードの配布とか
+いろいろ便利
+
+---
+
+次回の開催予定は未定
+
+---
+
+現在の開催状況
+
+|||
+|---|---|
+|技術書典5|18/10/08(月))|
+|技術書典4|18/04/22(日)|
+|技術書典3|17/10/22(日)|
+|技術書典2|17/04/09(日)|
+|超技術書典|17/04/29(土),30(日)|
+
+---
+
+次回は4月末かも
+
+---
+
+委託
+
+---
+
+<!-- .slide: data-background="img/booth.png"  data-background-size="100%" -->
+
+BOOTH
+
+---
+
+<!-- .slide: data-background="img/kindle.png"  data-background-size="100%" -->
+
+Kindle
+
+								</script>
 				</section>
 			</div>
 		</div>
